Fixed overflow of dropped NFTs

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -654,6 +654,10 @@ video {
   margin-top: 10%;
 }
 
+.mb-4{
+  margin-bottom: 1rem;
+}
+
 .mb-5{
   margin-bottom: 1.25rem;
 }
@@ -668,6 +672,14 @@ video {
 
 .mb-2{
   margin-bottom: 0.5rem;
+}
+
+.mt-8{
+  margin-top: 2rem;
+}
+
+.mt-auto{
+  margin-top: auto;
 }
 
 .block{
@@ -704,6 +716,10 @@ video {
 
 .h-5{
   height: 1.25rem;
+}
+
+.h-96{
+  height: 24rem;
 }
 
 .h-full{
@@ -743,8 +759,30 @@ video {
   width: 20rem;
 }
 
-.w-\[100vw\]{
-  width: 100vw;
+.w-fit{
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.w-\[70vw\]{
+  width: 70vw;
+}
+
+.w-\[60vw\]{
+  width: 60vw;
+}
+
+.min-w-fit{
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
+}
+
+.max-w-fit{
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
 }
 
 .border-spacing-4{
@@ -835,8 +873,14 @@ video {
   justify-content: space-evenly;
 }
 
-.gap-9{
-  gap: 2.25rem;
+.gap-10{
+  gap: 2.5rem;
+}
+
+.space-y-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
 .space-y-8 > :not([hidden]) ~ :not([hidden]){
@@ -845,10 +889,10 @@ video {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
-.space-y-2 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+.space-x-10 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .overflow-hidden{
